--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -29,6 +29,21 @@
   font-size: 16px;
 }
 
+.footer-info a {
+  color: #555;
+  text-decoration: none;
+  margin: 5px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.footer-info a:hover {
+  color: #969696ff;
+}
+
 .footer-info p {
   text-decoration: none;
   margin: 5px 0;
@@ -75,6 +90,13 @@
 .social-links a:hover {
   color: #0056b3;
   transform: scale(1.1);
+}
+
+.footer-copyright {
+  color: #888787ff;
+  font-size: 16px;
+  weight: 100px;
+  font-family: calibri;
 }
 
 @media (max-width: 768px) {
